[package]
name = "tritium"
version = "0.1.0"
description = "Swapping between pNFTs and SPL for Hybrid DeFi"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hybrid_defi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-token-auth-rules = { version = "1.4.3", features = ["no-entrypoint"] }
mpl-utils = "0.3.3"
ahash = "=0.8.6"
